parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> <empty>
Rule 2     program -> function
Rule 3     program -> program function
Rule 4     function -> func_header func_body
Rule 5     func_header -> VARIABLE_TYPE FUNCDECL LPAR args RPAR
Rule 6     args -> <empty>
Rule 7     args -> expr
Rule 8     args -> args COMMA expr
Rule 9     func_body -> block
Rule 10    block -> LCURL body RCURL
Rule 11    body -> <empty>
Rule 12    body -> body line semicolons
Rule 13    body -> body multiline
Rule 14    semicolons -> SEMICOLON
Rule 15    semicolons -> semicolons SEMICOLON
Rule 16    multiline -> if_statement
Rule 17    multiline -> while_statement
Rule 18    multiline -> for_statement
Rule 19    line -> modal_function
Rule 20    line -> init
Rule 21    line -> func
Rule 22    line -> assign
Rule 23    modal_function -> RETURN arg
Rule 24    modal_function -> BREAK
Rule 25    modal_function -> CONTINUE
Rule 26    var_cal -> ID LCUADR expr RCUADR
Rule 27    if_statement -> IF LPAR condition RPAR block
Rule 28    if_statement -> if_statement ELSE block
Rule 29    while_statement -> WHILE LPAR condition RPAR block
Rule 30    for_statement -> FOR LPAR init SEMICOLON condition SEMICOLON change_val RPAR block
Rule 31    change_val -> ID expr
Rule 32    condition -> expr cond_sign expr
Rule 33    cond_sign -> DEQUAL
Rule 34    cond_sign -> GT
Rule 35    cond_sign -> LT
Rule 36    cond_sign -> GE
Rule 37    cond_sign -> LE
Rule 38    cond_sign -> NOTEQUAL
Rule 39    init -> <empty>
Rule 40    init -> VARIABLE_TYPE ID
Rule 41    init -> VARIABLE_TYPE ID EQUAL ID DIVMUL NUMBER
Rule 42    init -> VARIABLE_TYPE ID EQUAL expr
Rule 43    init -> VARIABLE_TYPE ID EQUAL var_cal
Rule 44    init -> VARIABLE_TYPE ID LCUADR RCUADR EQUAL array_init
Rule 45    array_init -> LCURL init_block RCURL
Rule 46    init_block -> arg
Rule 47    init_block -> arg COMMA
Rule 48    init_block -> init_block arg
Rule 49    init_block -> init_block arg COMMA
Rule 50    assign -> ID EQUAL expr
Rule 51    assign -> ID EQUAL var_cal
Rule 52    assign -> var_cal EQUAL expr
Rule 53    assign -> var_cal EQUAL var_cal
Rule 54    assign -> ID expr
Rule 55    func -> CUSTOM_FUNC LPAR args RPAR
Rule 56    func -> ID LPAR args RPAR
Rule 57    func -> BUILD_IN LPAR args RPAR
Rule 58    func -> BUILD_IN output_operator
Rule 59    output_operator -> LT LT arg
Rule 60    output_operator -> LT LT BUILD_IN
Rule 61    output_operator -> LT LT ID
Rule 62    expr -> fact
Rule 63    expr -> PLUSMINUS PLUSMINUS
Rule 64    expr -> expr PLUSMINUS fact
Rule 65    expr -> expr MOD fact
Rule 66    expr -> ID
Rule 67    fact -> term
Rule 68    fact -> fact DIVMUL term
Rule 69    term -> arg
Rule 70    term -> LPAR expr RPAR
Rule 71    arg -> NUMBER
Rule 72    arg -> STRING
Rule 73    arg -> VARIABLE_TYPE ID
Rule 74    arg -> VARIABLE_TYPE ID LCUADR RCUADR
Rule 75    arg -> ID LCUADR RCUADR
Rule 76    arg -> var_cal
Rule 77    arg -> NUMBER ID
Rule 78    arg -> func

Terminals, with rules where they appear

BREAK                : 24
BUILD_IN             : 57 58 60
COMMA                : 8 47 49
CONTINUE             : 25
CUSTOM_FUNC          : 55
DEQUAL               : 33
DIVMUL               : 41 68
ELSE                 : 28
EQUAL                : 41 42 43 44 50 51 52 53
FOR                  : 30
FUNCDECL             : 5
GE                   : 36
GT                   : 34
ID                   : 26 31 40 41 41 42 43 44 50 51 54 56 61 66 73 74 75 77
IF                   : 27
LCUADR               : 26 44 74 75
LCURL                : 10 45
LE                   : 37
LPAR                 : 5 27 29 30 55 56 57 70
LT                   : 35 59 59 60 60 61 61
MOD                  : 65
NOTEQUAL             : 38
NUMBER               : 41 71 77
PLUSMINUS            : 63 63 64
RCUADR               : 26 44 74 75
RCURL                : 10 45
RETURN               : 23
RPAR                 : 5 27 29 30 55 56 57 70
SEMICOLON            : 14 15 30 30
STRING               : 72
VARIABLE_TYPE        : 5 40 41 42 43 44 73 74
WHILE                : 29
error                : 

Nonterminals, with rules where they appear

arg                  : 23 46 47 48 49 59 69
args                 : 5 8 55 56 57
array_init           : 44
assign               : 22
block                : 9 27 28 29 30
body                 : 10 12 13
change_val           : 30
cond_sign            : 32
condition            : 27 29 30
expr                 : 7 8 26 31 32 32 42 50 52 54 64 65 70
fact                 : 62 64 65 68
for_statement        : 18
func                 : 21 78
func_body            : 4
func_header          : 4
function             : 2 3
if_statement         : 16 28
init                 : 20 30
init_block           : 45 48 49
line                 : 12
modal_function       : 19
multiline            : 13
output_operator      : 58
program              : 3 0
semicolons           : 12 15
term                 : 67 68
var_cal              : 43 51 52 53 53 76
while_statement      : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> .
    (2) program -> . function
    (3) program -> . program function
    (4) function -> . func_header func_body
    (5) func_header -> . VARIABLE_TYPE FUNCDECL LPAR args RPAR

  ! shift/reduce conflict for VARIABLE_TYPE resolved as shift
    $end            reduce using rule 1 (program -> .)
    VARIABLE_TYPE   shift and go to state 4

  ! VARIABLE_TYPE   [ reduce using rule 1 (program -> .) ]

    program                        shift and go to state 1
    function                       shift and go to state 2
    func_header                    shift and go to state 3

state 1

    (0) S' -> program .
    (3) program -> program . function
    (4) function -> . func_header func_body
    (5) func_header -> . VARIABLE_TYPE FUNCDECL LPAR args RPAR

    VARIABLE_TYPE   shift and go to state 4

    function                       shift and go to state 5
    func_header                    shift and go to state 3

state 2

    (2) program -> function .

    VARIABLE_TYPE   reduce using rule 2 (program -> function .)
    $end            reduce using rule 2 (program -> function .)


state 3

    (4) function -> func_header . func_body
    (9) func_body -> . block
    (10) block -> . LCURL body RCURL

    LCURL           shift and go to state 8

    func_body                      shift and go to state 6
    block                          shift and go to state 7

state 4

    (5) func_header -> VARIABLE_TYPE . FUNCDECL LPAR args RPAR

    FUNCDECL        shift and go to state 9


state 5

    (3) program -> program function .

    VARIABLE_TYPE   reduce using rule 3 (program -> program function .)
    $end            reduce using rule 3 (program -> program function .)


state 6

    (4) function -> func_header func_body .

    VARIABLE_TYPE   reduce using rule 4 (function -> func_header func_body .)
    $end            reduce using rule 4 (function -> func_header func_body .)


state 7

    (9) func_body -> block .

    VARIABLE_TYPE   reduce using rule 9 (func_body -> block .)
    $end            reduce using rule 9 (func_body -> block .)


state 8

    (10) block -> LCURL . body RCURL
    (11) body -> .
    (12) body -> . body line semicolons
    (13) body -> . body multiline

    RCURL           reduce using rule 11 (body -> .)
    RETURN          reduce using rule 11 (body -> .)
    BREAK           reduce using rule 11 (body -> .)
    CONTINUE        reduce using rule 11 (body -> .)
    VARIABLE_TYPE   reduce using rule 11 (body -> .)
    CUSTOM_FUNC     reduce using rule 11 (body -> .)
    ID              reduce using rule 11 (body -> .)
    BUILD_IN        reduce using rule 11 (body -> .)
    IF              reduce using rule 11 (body -> .)
    WHILE           reduce using rule 11 (body -> .)
    FOR             reduce using rule 11 (body -> .)
    SEMICOLON       reduce using rule 11 (body -> .)

    body                           shift and go to state 10

state 9

    (5) func_header -> VARIABLE_TYPE FUNCDECL . LPAR args RPAR

    LPAR            shift and go to state 11


state 10

    (10) block -> LCURL body . RCURL
    (12) body -> body . line semicolons
    (13) body -> body . multiline
    (19) line -> . modal_function
    (20) line -> . init
    (21) line -> . func
    (22) line -> . assign
    (16) multiline -> . if_statement
    (17) multiline -> . while_statement
    (18) multiline -> . for_statement
    (23) modal_function -> . RETURN arg
    (24) modal_function -> . BREAK
    (25) modal_function -> . CONTINUE
    (39) init -> .
    (40) init -> . VARIABLE_TYPE ID
    (41) init -> . VARIABLE_TYPE ID EQUAL ID DIVMUL NUMBER
    (42) init -> . VARIABLE_TYPE ID EQUAL expr
    (43) init -> . VARIABLE_TYPE ID EQUAL var_cal
    (44) init -> . VARIABLE_TYPE ID LCUADR RCUADR EQUAL array_init
    (55) func -> . CUSTOM_FUNC LPAR args RPAR
    (56) func -> . ID LPAR args RPAR
    (57) func -> . BUILD_IN LPAR args RPAR
    (58) func -> . BUILD_IN output_operator
    (50) assign -> . ID EQUAL expr
    (51) assign -> . ID EQUAL var_cal
    (52) assign -> . var_cal EQUAL expr
    (53) assign -> . var_cal EQUAL var_cal
    (54) assign -> . ID expr
    (27) if_statement -> . IF LPAR condition RPAR block
    (28) if_statement -> . if_statement ELSE block
    (29) while_statement -> . WHILE LPAR condition RPAR block
    (30) for_statement -> . FOR LPAR init SEMICOLON condition SEMICOLON change_val RPAR block
    (26) var_cal -> . ID LCUADR expr RCUADR

    RCURL           shift and go to state 12
    RETURN          shift and go to state 22
    BREAK           shift and go to state 23
    CONTINUE        shift and go to state 24
    SEMICOLON       reduce using rule 39 (init -> .)
    VARIABLE_TYPE   shift and go to state 25
    CUSTOM_FUNC     shift and go to state 28
    ID              shift and go to state 26
    BUILD_IN        shift and go to state 29
    IF              shift and go to state 30
    WHILE           shift and go to state 31
    FOR             shift and go to state 32

    line                           shift and go to state 13
    multiline                      shift and go to state 14
    modal_function                 shift and go to state 15
    init                           shift and go to state 16
    func                           shift and go to state 17
    assign                         shift and go to state 18
    if_statement                   shift and go to state 19
    while_statement                shift and go to state 20
    for_statement                  shift and go to state 21
    var_cal                        shift and go to state 27

state 11

    (5) func_header -> VARIABLE_TYPE FUNCDECL LPAR . args RPAR
    (6) args -> .
    (7) args -> . expr
    (8) args -> . args COMMA expr
    (62) expr -> . fact
    (63) expr -> . PLUSMINUS PLUSMINUS
    (64) expr -> . expr PLUSMINUS fact
    (65) expr -> . expr MOD fact
    (66) expr -> . ID
    (67) fact -> . term
    (68) fact -> . fact DIVMUL term
    (69) term -> . arg
    (70) term -> . LPAR expr RPAR
    (71) arg -> . NUMBER
    (72) arg -> . STRING
    (73) arg -> . VARIABLE_TYPE ID
    (74) arg -> . VARIABLE_TYPE ID LCUADR RCUADR
    (75) arg -> . ID LCUADR RCUADR
    (76) arg -> . var_cal
    (77) arg -> . NUMBER ID
    (78) arg -> . func
    (26) var_cal -> . ID LCUADR expr RCUADR
    (55) func -> . CUSTOM_FUNC LPAR args RPAR
    (56) func -> . ID LPAR args RPAR
    (57) func -> . BUILD_IN LPAR args RPAR
    (58) func -> . BUILD_IN output_operator

    RPAR            reduce using rule 6 (args -> .)
    COMMA           reduce using rule 6 (args -> .)
    PLUSMINUS       shift and go to state 38
    ID              shift and go to state 39
    LPAR            shift and go to state 34
    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    VARIABLE_TYPE   shift and go to state 33
    CUSTOM_FUNC     shift and go to state 28
    BUILD_IN        shift and go to state 29

    args                           shift and go to state 35
    expr                           shift and go to state 36
    fact                           shift and go to state 37
    term                           shift and go to state 40
    arg                            shift and go to state 41
    var_cal                        shift and go to state 44
    func                           shift and go to state 45

state 12

    (10) block -> LCURL body RCURL .

    VARIABLE_TYPE   reduce using rule 10 (block -> LCURL body RCURL .)
    $end            reduce using rule 10 (block -> LCURL body RCURL .)
    ELSE            reduce using rule 10 (block -> LCURL body RCURL .)
    RCURL           reduce using rule 10 (block -> LCURL body RCURL .)
    RETURN          reduce using rule 10 (block -> LCURL body RCURL .)
    BREAK           reduce using rule 10 (block -> LCURL body RCURL .)
    CONTINUE        reduce using rule 10 (block -> LCURL body RCURL .)
    CUSTOM_FUNC     reduce using rule 10 (block -> LCURL body RCURL .)
    ID              reduce using rule 10 (block -> LCURL body RCURL .)
    BUILD_IN        reduce using rule 10 (block -> LCURL body RCURL .)
    IF              reduce using rule 10 (block -> LCURL body RCURL .)
    WHILE           reduce using rule 10 (block -> LCURL body RCURL .)
    FOR             reduce using rule 10 (block -> LCURL body RCURL .)
    SEMICOLON       reduce using rule 10 (block -> LCURL body RCURL .)


state 13

    (12) body -> body line . semicolons
    (14) semicolons -> . SEMICOLON
    (15) semicolons -> . semicolons SEMICOLON

    SEMICOLON       shift and go to state 47

    semicolons                     shift and go to state 46

state 14

    (13) body -> body multiline .

    RCURL           reduce using rule 13 (body -> body multiline .)
    RETURN          reduce using rule 13 (body -> body multiline .)
    BREAK           reduce using rule 13 (body -> body multiline .)
    CONTINUE        reduce using rule 13 (body -> body multiline .)
    VARIABLE_TYPE   reduce using rule 13 (body -> body multiline .)
    CUSTOM_FUNC     reduce using rule 13 (body -> body multiline .)
    ID              reduce using rule 13 (body -> body multiline .)
    BUILD_IN        reduce using rule 13 (body -> body multiline .)
    IF              reduce using rule 13 (body -> body multiline .)
    WHILE           reduce using rule 13 (body -> body multiline .)
    FOR             reduce using rule 13 (body -> body multiline .)
    SEMICOLON       reduce using rule 13 (body -> body multiline .)


state 15

    (19) line -> modal_function .

    SEMICOLON       reduce using rule 19 (line -> modal_function .)


state 16

    (20) line -> init .

    SEMICOLON       reduce using rule 20 (line -> init .)


state 17

    (21) line -> func .

    SEMICOLON       reduce using rule 21 (line -> func .)


state 18

    (22) line -> assign .

    SEMICOLON       reduce using rule 22 (line -> assign .)


state 19

    (16) multiline -> if_statement .
    (28) if_statement -> if_statement . ELSE block

    RCURL           reduce using rule 16 (multiline -> if_statement .)
    RETURN          reduce using rule 16 (multiline -> if_statement .)
    BREAK           reduce using rule 16 (multiline -> if_statement .)
    CONTINUE        reduce using rule 16 (multiline -> if_statement .)
    VARIABLE_TYPE   reduce using rule 16 (multiline -> if_statement .)
    CUSTOM_FUNC     reduce using rule 16 (multiline -> if_statement .)
    ID              reduce using rule 16 (multiline -> if_statement .)
    BUILD_IN        reduce using rule 16 (multiline -> if_statement .)
    IF              reduce using rule 16 (multiline -> if_statement .)
    WHILE           reduce using rule 16 (multiline -> if_statement .)
    FOR             reduce using rule 16 (multiline -> if_statement .)
    SEMICOLON       reduce using rule 16 (multiline -> if_statement .)
    ELSE            shift and go to state 48


state 20

    (17) multiline -> while_statement .

    RCURL           reduce using rule 17 (multiline -> while_statement .)
    RETURN          reduce using rule 17 (multiline -> while_statement .)
    BREAK           reduce using rule 17 (multiline -> while_statement .)
    CONTINUE        reduce using rule 17 (multiline -> while_statement .)
    VARIABLE_TYPE   reduce using rule 17 (multiline -> while_statement .)
    CUSTOM_FUNC     reduce using rule 17 (multiline -> while_statement .)
    ID              reduce using rule 17 (multiline -> while_statement .)
    BUILD_IN        reduce using rule 17 (multiline -> while_statement .)
    IF              reduce using rule 17 (multiline -> while_statement .)
    WHILE           reduce using rule 17 (multiline -> while_statement .)
    FOR             reduce using rule 17 (multiline -> while_statement .)
    SEMICOLON       reduce using rule 17 (multiline -> while_statement .)


state 21

    (18) multiline -> for_statement .

    RCURL           reduce using rule 18 (multiline -> for_statement .)
    RETURN          reduce using rule 18 (multiline -> for_statement .)
    BREAK           reduce using rule 18 (multiline -> for_statement .)
    CONTINUE        reduce using rule 18 (multiline -> for_statement .)
    VARIABLE_TYPE   reduce using rule 18 (multiline -> for_statement .)
    CUSTOM_FUNC     reduce using rule 18 (multiline -> for_statement .)
    ID              reduce using rule 18 (multiline -> for_statement .)
    BUILD_IN        reduce using rule 18 (multiline -> for_statement .)
    IF              reduce using rule 18 (multiline -> for_statement .)
    WHILE           reduce using rule 18 (multiline -> for_statement .)
    FOR             reduce using rule 18 (multiline -> for_statement .)
    SEMICOLON       reduce using rule 18 (multiline -> for_statement .)


state 22

    (23) modal_function -> RETURN . arg
    (71) arg -> . NUMBER
    (72) arg -> . STRING
    (73) arg -> . VARIABLE_TYPE ID
    (74) arg -> . VARIABLE_TYPE ID LCUADR RCUADR
    (75) arg -> . ID LCUADR RCUADR
    (76) arg -> . var_cal
    (77) arg -> . NUMBER ID
    (78) arg -> . func
    (26) var_cal -> . ID LCUADR expr RCUADR
    (55) func -> . CUSTOM_FUNC LPAR args RPAR
    (56) func -> . ID LPAR args RPAR
    (57) func -> . BUILD_IN LPAR args RPAR
    (58) func -> . BUILD_IN output_operator

    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    VARIABLE_TYPE   shift and go to state 33
    ID              shift and go to state 50
    CUSTOM_FUNC     shift and go to state 28
    BUILD_IN        shift and go to state 29

    arg                            shift and go to state 49
    var_cal                        shift and go to state 44
    func                           shift and go to state 45

state 23

    (24) modal_function -> BREAK .

    SEMICOLON       reduce using rule 24 (modal_function -> BREAK .)


state 24

    (25) modal_function -> CONTINUE .

    SEMICOLON       reduce using rule 25 (modal_function -> CONTINUE .)


state 25

    (40) init -> VARIABLE_TYPE . ID
    (41) init -> VARIABLE_TYPE . ID EQUAL ID DIVMUL NUMBER
    (42) init -> VARIABLE_TYPE . ID EQUAL expr
    (43) init -> VARIABLE_TYPE . ID EQUAL var_cal
    (44) init -> VARIABLE_TYPE . ID LCUADR RCUADR EQUAL array_init

    ID              shift and go to state 51


state 26

    (56) func -> ID . LPAR args RPAR
    (50) assign -> ID . EQUAL expr
    (51) assign -> ID . EQUAL var_cal
    (54) assign -> ID . expr
    (26) var_cal -> ID . LCUADR expr RCUADR
    (62) expr -> . fact
    (63) expr -> . PLUSMINUS PLUSMINUS
    (64) expr -> . expr PLUSMINUS fact
    (65) expr -> . expr MOD fact
    (66) expr -> . ID
    (67) fact -> . term
    (68) fact -> . fact DIVMUL term
    (69) term -> . arg
    (70) term -> . LPAR expr RPAR
    (71) arg -> . NUMBER
    (72) arg -> . STRING
    (73) arg -> . VARIABLE_TYPE ID
    (74) arg -> . VARIABLE_TYPE ID LCUADR RCUADR
    (75) arg -> . ID LCUADR RCUADR
    (76) arg -> . var_cal
    (77) arg -> . NUMBER ID
    (78) arg -> . func
    (26) var_cal -> . ID LCUADR expr RCUADR
    (55) func -> . CUSTOM_FUNC LPAR args RPAR
    (56) func -> . ID LPAR args RPAR
    (57) func -> . BUILD_IN LPAR args RPAR
    (58) func -> . BUILD_IN output_operator

    LPAR            shift and go to state 52
    EQUAL           shift and go to state 53
    LCUADR          shift and go to state 55
    PLUSMINUS       shift and go to state 38
    ID              shift and go to state 39
    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    VARIABLE_TYPE   shift and go to state 33
    CUSTOM_FUNC     shift and go to state 28
    BUILD_IN        shift and go to state 29

    expr                           shift and go to state 54
    var_cal                        shift and go to state 44
    fact                           shift and go to state 37
    term                           shift and go to state 40
    arg                            shift and go to state 41
    func                           shift and go to state 45

state 27

    (52) assign -> var_cal . EQUAL expr
    (53) assign -> var_cal . EQUAL var_cal

    EQUAL           shift and go to state 56


state 28

    (55) func -> CUSTOM_FUNC . LPAR args RPAR

    LPAR            shift and go to state 57


state 29

    (57) func -> BUILD_IN . LPAR args RPAR
    (58) func -> BUILD_IN . output_operator
    (59) output_operator -> . LT LT arg
    (60) output_operator -> . LT LT BUILD_IN
    (61) output_operator -> . LT LT ID

    LPAR            shift and go to state 58
    LT              shift and go to state 60

    output_operator                shift and go to state 59

state 30

    (27) if_statement -> IF . LPAR condition RPAR block

    LPAR            shift and go to state 61


state 31

    (29) while_statement -> WHILE . LPAR condition RPAR block

    LPAR            shift and go to state 62


state 32

    (30) for_statement -> FOR . LPAR init SEMICOLON condition SEMICOLON change_val RPAR block

    LPAR            shift and go to state 63


state 33

    (73) arg -> VARIABLE_TYPE . ID
    (74) arg -> VARIABLE_TYPE . ID LCUADR RCUADR

    ID              shift and go to state 64


state 34

    (70) term -> LPAR . expr RPAR
    (62) expr -> . fact
    (63) expr -> . PLUSMINUS PLUSMINUS
    (64) expr -> . expr PLUSMINUS fact
    (65) expr -> . expr MOD fact
    (66) expr -> . ID
    (67) fact -> . term
    (68) fact -> . fact DIVMUL term
    (69) term -> . arg
    (70) term -> . LPAR expr RPAR
    (71) arg -> . NUMBER
    (72) arg -> . STRING
    (73) arg -> . VARIABLE_TYPE ID
    (74) arg -> . VARIABLE_TYPE ID LCUADR RCUADR
    (75) arg -> . ID LCUADR RCUADR
    (76) arg -> . var_cal
    (77) arg -> . NUMBER ID
    (78) arg -> . func
    (26) var_cal -> . ID LCUADR expr RCUADR
    (55) func -> . CUSTOM_FUNC LPAR args RPAR
    (56) func -> . ID LPAR args RPAR
    (57) func -> . BUILD_IN LPAR args RPAR
    (58) func -> . BUILD_IN output_operator

    PLUSMINUS       shift and go to state 38
    ID              shift and go to state 39
    LPAR            shift and go to state 34
    NUMBER          shift and go to state 42
    STRING          shift and go to state 43
    VARIABLE_TYPE   shift and go to state 33
    CUSTOM_FUNC     shift and go to state 28
    BUILD_IN        shift and go to state 29

    expr                           shift and go to state 65
    fact                           shift and go to state 37
    term                           shift and go to state 40
    arg                            shift and go to state 41
    var_cal                        shift and go to state 44
    func                           shift and go to state 45

state 35

    (5) func_header -> VARIABLE_TYPE FUNCDECL LPAR args . RPAR
    (8) args -> args . COMMA expr

    RPAR            shift and go to state 66
    COMMA           shift and go to state 67


state 36

    (7) args -> expr .
    (64) expr -> expr . PLUSMINUS fact
    (65) expr -> expr . MOD fact

    RPAR            reduce using rule 7 (args -> expr .)
    COMMA           reduce using rule 7 (args -> expr .)
    PLUSMINUS       shift and go to state 68
    MOD             shift and go to state 69


state 37

    (62) expr -> fact .
    (68) fact -> fact . DIVMUL term

    PLUSMINUS       reduce using rule 62 (expr -> fact .)
    MOD             reduce using rule 62 (expr -> fact .)
    RPAR            reduce using rule 62 (expr -> fact .)
    COMMA           reduce using rule 62 (expr -> fact .)
    SEMICOLON       reduce using rule 62 (expr -> fact .)
    RCUADR          reduce using rule 62 (expr -> fact .)
    DEQUAL          reduce using rule 62 (expr -> fact .)
    GT              reduce using rule 62 (expr -> fact .)
    LT              reduce using rule 62 (expr -> fact .)
    GE              reduce using rule 62 (expr -> fact .)
    LE              reduce using rule 62 (expr -> fact .)
    NOTEQUAL        reduce using rule 62 (expr -> fact .)
    DIVMUL          shift and go to state 70


state 38

    (63) expr -> PLUSMINUS . PLUSMINUS

    PLUSMINUS       shift and go to state 71


state 39

    (66) expr -> ID .
    (75) arg -> ID . LCUADR RCUADR
    (26) var_cal -> ID . LCUADR expr RCUADR
    (56) func -> ID . LPAR args RPAR

    PLUSMINUS       reduce using rule 66 (expr -> ID .)
    MOD             reduce using rule 66 (expr -> ID .)
    RPAR            reduce using rule 66 (expr -> ID .)
    COMMA           reduce using rule 66 (expr -> ID .)
    SEMICOLON       reduce using rule 66 (expr -> ID .)
    RCUADR          reduce using rule 66 (expr -> ID .)
    DEQUAL          reduce using rule 66 (expr -> ID .)
    GT              reduce using rule 66 (expr -> ID .)
    LT              reduce using rule 66 (expr -> ID .)
    GE              reduce using rule 66 (expr -> ID .)
    LE              reduce using rule 66 (expr -> ID .)
    NOTEQUAL        reduce using rule 66 (expr -> ID .)
    LCUADR          shift and go to state 72
    LPAR            shift and go to state 73


state 40

    (67) fact -> term .
